--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
 </head>
 <body>
-
+    <div class="container" style="max-width: 500px">
+        <h3 class="mb-3">Thymeleaf File Upload example</h3>
+      
+        <form
+          id="uploadForm"
+          method="post"
+          th:action="@{/files/upload}"
+          enctype="multipart/form-data">
+          <input id="input-file" type="file" name="file" />
+          <input id="cao-name" type="text" name="CAO" />
+          <button class="btn btn-sm btn-outline-success float-right" type="submit">
+            Upload
+          </button>
+        </form>
+          </button>
+        </div>
+      </div>
 </body>
 </html>
