--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -13,7 +13,7 @@
         <form
           id="uploadForm"
           method="post"
-          th:action="@{/files/upload}"
+          th:action="@{/upload}"
           enctype="multipart/form-data">
           <input id="input-file" type="file" name="file" />
           <input id="cao-name" type="text" name="CAO" />
