--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html >
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css" /> 
+    <link th:href="@{/styles/styles.css}" rel="stylesheet"  /> 
     <title>Portfolio</title>
 </head>
 <body>
   <div class="header">
-    <img src="Untitled.png" alt="Ul logo">
+    <img th:src="@{/Untitled.png}" alt="Ul logo">
     Portfolio Submission Portal
   </div>
   <div class="container">
