--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link th:href="@{/styles/styles.css}" rel="stylesheet"  /> 
+    <link href="../static/styles/styles.css" rel="stylesheet"  /> 
     <title>Portfolio</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
         
       
 
-        <button class="btn btn-sm btn-outline-success float-right" type="submit">
+        <button type="submit">
           Upload
         </button>
       </form>
