removed pasted html added by accident

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,7 +20,7 @@
             </form>
         </div>
         <div class="gifs ">
-            <img src="https://media.giphy.com/media/6pfEK1odbmcNi/giphy.gif" alt="Success GIF">
+            <img src="https://media.giphy.com/media/6pfEK1odbmcNi/giphy.gif" alt="Welcome GIF">
         </div>
         
         <div class="footer">
