--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,8 +20,8 @@
                 You have been logged out.
             </div>
             <form th:action="@{/login}" method="post">
-                <div><label> User Name : <input type="text" name="username"/> </label></div>
-                <div><label> Password: <input type="password" name="password"/> </label></div>
+                <div><label> User Name : <input type="text" name="username"/> </label></div><br>
+                <div><label> Password  : <input type="password" name="password"/> </label></div>
                 <div><input type="submit" value="Sign In"/></div>
             </form>
               </div>
@@ -31,181 +31,3 @@
             </div>
     </body>
 </html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../static/styles/styles.css" rel="stylesheet"  /> 
-    <title>Home</title>
-</head>
-<body>
-    <div class="header">
-        <img th:src="@{/Untitled.png}" alt="Ul logo">
-        Portfolio Submission Portal
-      </div>
-        <div class="container">
-            <h3>Welcome to the ISE Portfolio Upload System</h3>
-            <p></p>
-            <form action="/redirectToHome" method="GET">
-                <button type="submit">Login Page</button>
-            </form>
-        </div>
-        <div class="gifs ">
-            <img src="https://media.giphy.com/media/6pfEK1odbmcNi/giphy.gif" alt="Success GIF">
-        </div>
-        
-        <div class="footer">
-            Art Ó Liatháin, Daniel Kennedy, John Foley
-        </div>
-    </body>
-</body>
-</html>
-
-<!DOCTYPE html >
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../static/styles/styles.css" rel="stylesheet"  /> 
-    <title>Portfolio</title>
-</head>
-<body>
-  <div class="header">
-    <img th:src="@{/Untitled.png}" alt="Ul logo">
-    Portfolio Submission Portal
-  </div>
-  <div class="container">
-    <div>
-      <h1>Submit portfolio here</h1>
-      
-      
-      <form
-        id="uploadForm"
-        method="post"
-        th:action="@{/upload}"
-        enctype="multipart/form-data">
-        <span>CAO Number</span>
-        <input id="cao-name" type="text" name="CAO" /> <br>
-        <input id="input-file" type="file" name="file" /> <br>
-        
-      
-
-        <button type="submit">
-          Upload
-        </button>
-      </form>
-        </button>
-      </div>
-      </div>
-    </div>
-    <div class="footer">
-      Art Ó Liatháin, Daniel Kennedy, John Foley
-    </div>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../static/styles/styles.css" rel="stylesheet"  /> 
-    <title>Succcess</title>  
-</head>
-<body>
-  <div class="header">
-    <img th:src="@{/Untitled.png}" alt="Ul logo">
-    Portfolio Submission Portal
-  </div>
-    <div class="successpage">
-        <h3 class="success">Success: </h3>
-        <p>You have succesfully uploaded your pdf file to the database</p>
-
-        <form action="/redirect" method="GET">
-            <button type="submit">Return</button>
-        </form>
-    </div>
-    <div class="gifs ">
-        <img src="https://media.giphy.com/media/a0h7sAqON67nO/giphy.gif" alt="Success GIF">
-    </div>
-    
-    <div class="footer">
-        Art Ó Liatháin, Daniel Kennedy, John Foley
-    </div>
-</body>
-</html>
-
-body {
-    min-height: 100vh;
-    display: flex;
-    overflow: hidden;
-    margin: 0;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: 	#03e190;
-}
-
-
-.container {
-    padding: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-.header {
-    background-color: 	#039d65;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 50px;
-    font-weight: bold;
-    padding-right: 5%;
-}
-
-img {
-    aspect-ratio: initial;
-    width: 200px;
-}
-
-.footer {
-    display: flex;
-    background-color: 	#039d65;
-    justify-content: center;
-    font-size: 30px;    
-}
-
-button {
-    margin-top: 10px;
-    font-size: 20px;
-    margin-left: 35%;
-    
-}
-
-.successpage {
-    /* padding: 0px; */
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    
-}
-
-.gifs {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50vh;
-}
-
-.gifs img {
-    max-width: 100%;
-    max-height: 100%;
-}
