--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../static/styles/styles.css" rel="stylesheet"  /> 
+    <link th:href="@{/styles/styles.css}" rel="stylesheet"  /> 
     <title>Home</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div class="container">
             <h3>Welcome to the ISE Portfolio Upload System</h3>
             <p></p>
-            <form action="/redirectToHome" method="GET">
+            <form action="/upload" method="GET">
                 <button type="submit">Login Page</button>
             </form>
         </div>
