--- a/src/main/resources/static/styles/styles.css
+++ b/src/main/resources/static/styles/styles.css
@@ -67,3 +67,11 @@ button {
     max-width: 100%;
     max-height: 100%;
 }
+
+.error{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    color: red;
+}
